--- a/example/index.html
+++ b/example/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -10,7 +10,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
       // Work-around node polyfills missing in Vite.
-      window.global = window;
+      window.global = window
     </script>
     <script type="module" src="./index.js"></script>
   </body>
